frontend/page-connection

--- a/frontend/src/Components/UserValidation/UserValidation.scss
+++ b/frontend/src/Components/UserValidation/UserValidation.scss
@@ -25,6 +25,7 @@
         justify-content: center;
         transition: height 0.1s ease-in-out 0s;
         width: 100%;
+        padding-top:1.5rem;
         
 
 
