--- a/frontend/src/Components/UserValidation/UserValidation.scss
+++ b/frontend/src/Components/UserValidation/UserValidation.scss
@@ -141,3 +141,16 @@
 }
 }
 
+.job-title{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10%;
+    &-text{
+        color: red;
+    font-size: small;
+    font-weight: bold;
+    text-transform: uppercase;
+    }
+}
+
